# Lingo-Voice

./: .gitignore  LICENSE.AGPL  LICENSE.COMMERCIAL  QUICKSTART.md  README.md  app.py  pyproject.toml
