[project]
name = "lingo-voice"
version = "0.1.0"
description = ""
authors = [
    {name = "AB",email = "ab.contact.lienhe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later OR Commercial"}
dependencies = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "streamlit>=1.28.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
